<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/repositoryTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/numberOfForksTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:text="@string/forkNumberExample"
                android:layout_toStartOf="@id/forkImageView"
                android:textColor="@color/lightGray" />

            <ImageView
                android:id="@+id/forkImageView"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/number_of_forks"
                app:srcCompat="@drawable/fork" />

            <androidx.cardview.widget.CardView
                android:id="@+id/repositoryOwnerImageViewContainer"
                android:layout_width="@dimen/ownerImageSize"
                android:layout_height="@dimen/ownerImageSize"
                android:layout_centerVertical="true"
                app:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="0dp"
                app:cardCornerRadius="@dimen/ownerImageBorderRadius">

                <View
                    android:id="@+id/repositoryOwnerImageView"
                    android:layout_width="@dimen/ownerImageSize"
                    android:layout_height="@dimen/ownerImageSize"
                    android:background="@drawable/github_logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/repositoryNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toStartOf="@id/numberOfForksTextView"
                android:layout_toEndOf="@+id/repositoryOwnerImageViewContainer"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="@color/lightGray"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/repositoryDescriptionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repositoryTitleBar"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/description_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repositoryDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repositoryDescriptionTitleTextView"
            android:autoLink="web"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/description_example" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>